# network-live-v2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: nl.yml
network_live/: check_region.py  ftp.py
network_live/atoll/: atoll.py  sql_commands.py
network_live/beeline/: extra_cells.py
network_live/beeline/huawei/: huawei_utils.py  lte.py  main.py
network_live/scripts/: update_beeline_huawei_lte.py
tests/beeline/huawei/: test_parse_lte.py
tests/fixtures/: physical_parameters.json
tests/fixtures/beeline/huawei/results/: lte_mocn.json  lte_moran.json
tests/fixtures/beeline/huawei/xml/: PTR_Bostandyk_GU9L21BKTZ.XML
